fixed overflow:hidden

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   font-family: 'roboto';
   width: 100vw;
   height: 100wh;
+  overflow: hidden;
 }
 
 .App-logo {
